# whisper-asr-webservice

./: Dockerfile.gpu  pyproject.toml
.github/workflows/: docker-image.yml
app/: webservice.py
