[tool.poetry]
name = "whisper-asr-webservice"
version = "1.2.4-dev"
description = "Whisper ASR Webservice is a general-purpose speech recognition webservice."
homepage  = "https://github.com/ahmetoner/whisper-asr-webservice/"
license = "https://github.com/ahmetoner/whisper-asr-webservice/blob/main/LICENCE"
authors = [
    "Ahmet Öner",
    "Besim Alibegovic",
]
readme = "README.md"
packages = [{ include = "app" }]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
gunicorn = "^21.0.1"
tqdm = "^4.66.1"
python-multipart = "^0.0.6"
ffmpeg-python = "^0.2.0"
fastapi = "^0.104.1"
llvmlite = "^0.41.1"
numba = "^0.58.0"
openai-whisper = "^20231117"
faster-whisper = "^0.10.0"

# The torch dependencies are unchanged here, but consider updating them globally for GPU compatibility
pyannote-audio = "^2.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
